# av-stream-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: AVFoundationWrapper.h  FileReader.h
src/: AvFoundationWrapper.h  AvFoundationWrapper.mm  main.cpp
test/: README.md  main.cpp
